# local-voice-agent-cuda

./: README.md
server/: bot.py  pyproject.toml  requirements.txt  tts_kokoro_cuda.py
